--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,8 +75,8 @@ test = [
   "stestr>=4.1",
 ]
 lint = [
-    "black~=24.8",
-    "ruff~=0.6",
+    "black~=25.1",
+    "ruff==0.11.4",
     "setuptools-rust",
     "typos~=1.28",
 ]
