--- a/.github/workflows/wheels_new.yml
+++ b/.github/workflows/wheels_new.yml
@@ -55,7 +55,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - name: Install cibuildwheel
         run: |
-          python -m pip install cibuildwheel==2.23.2
+          python -m pip install -U pip
+          python -m pip install -U --group releaseinfra
       - name: Build wheels
         run: |
           python -m cibuildwheel --output-dir wheelhouse
@@ -98,7 +99,8 @@ jobs:
         run: rustup default stable-i686-pc-windows-msvc
       - name: Install cibuildwheel
         run: |
-          python -m pip install cibuildwheel==2.23.2
+          python -m pip install -U pip
+          python -m pip install -U --group releaseinfra
       - name: Build wheels
         run: |
           python -m cibuildwheel --output-dir wheelhouse
