--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,19 +111,22 @@ target-version = ['py39', 'py310', 'py311', 'py312']
 [tool.ruff]
 line-length = 105 # more lenient than black due to long function signatures
 src = ["rustworkx", "setup.py", "tests"]
-lint.select = [
+target-version = "py39"
+extend-exclude = ["doc"]
+
+[tool.ruff.lint]
+.select = [
     "E",   # pycodestyle
     "F",   # pyflakes
     "UP",  # pyupgrade
     "PYI", # flake8-pyi
     "Q",   # flake8-quotes
 ]
-target-version = "py39"
-extend-exclude = ["doc"]
+per-file-ignores = {
+    "rustworkx/__init__.py": ["F405", "F403"],
+    "*.pyi": ["F403", "F405", "PYI001", "PYI002"],
+}
 
-[tool.ruff.lint.per-file-ignores]
-"rustworkx/__init__.py" = ["F405", "F403"]
-"*.pyi" = ["F403", "F405", "PYI001", "PYI002"]
 
 [tool.typos.default]
 extend-ignore-words-re = [
@@ -158,3 +161,15 @@ repair-wheel-command = "brew install pipx && pipx ensurepath && pipx run --spec 
 
 [tool.cibuildwheel.windows]
 repair-wheel-command = "cp {wheel} {dest_dir}/. && pipx run abi3audit==0.0.9 --strict --report {wheel}"
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.environments]
+default = {features = [], solve-group = "default"}
+
+[tool.pixi.dependencies]
+pyodide-build = ">=0.30.2,<0.31"
+emscripten = ">=3.1.58,<4"
+nodejs = ">=22.13.0,<22.14"
