--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,10 +122,10 @@ select = [
     "PYI", # flake8-pyi
     "Q",   # flake8-quotes
 ]
-per-file-ignores = {
-    "rustworkx/__init__.py": ["F405", "F403"],
-    "*.pyi": ["F403", "F405", "PYI001", "PYI002"],
-}
+#per-file-ignores = {
+#    "rustworkx/__init__.py": ["F405", "F403"],
+#    "*.pyi": ["F403", "F405", "PYI001", "PYI002"],
+#}
 
 
 [tool.typos.default]
@@ -175,13 +175,13 @@ emscripten = ">=3.1.58,<4"
 nodejs = ">=22.13.0,<22.14"
 
 [tool.pixi.task]
-configure_nightly = {cmd = "rustup", "install", "nightly-2025-02-01"}
+configure_nightly = {cmd = ["rustup", "install", "nightly-2025-02-01"]}
 configure_wasm = {
-    cmd = "rustup", args = ["target", "add", "wasm32-unknown-emscripten", "--toolchain", "nightly-2025-02-01"],
+    cmd = ["rustup", "target", "add", "wasm32-unknown-emscripten", "--toolchain", "nightly-2025-02-01"],
     depends-on = ["configure_nightly"]
 }
 build_pyodide = {
-    cmd = {"pyodide", "build"},
+    cmd = ["pyodide", "build"],
      env = {
         RUSTUP_TOOLCHAIN = "hello",
         RUSTFLAGS = "-C target-feature=+atomics,+bulk-memory,+mutable-globals -C link-arg=-sSIDE_MODULE=2 -C link-arg=-sWASM_BIGINT -Z emscripten-wasm-eh",
