--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,17 +167,19 @@ platforms = ["linux-64"]
 default = {features = [], solve-group = "default"}
 
 [tool.pixi.dependencies]
-pyodide-build = ">=0.30.2,<0.31"
-emscripten = ">=3.1.58,<4"
+pyodide-build = "==0.30.2"
+emscripten = "==3.1.58"
 nodejs = ">=22.13.0,<22.14"
+rust = "==1.86"
+rust-std-wasm32-unknown-emscripten = "==1.86"
 
 
-[tool.pixi.tasks.configure_nightly]
-cmd = ["rustup", "install", "nightly-2025-02-01"]
+#[tool.pixi.tasks.configure_nightly]
+#cmd = ["rustup", "install", "nightly-2025-02-01"]
 
-[tool.pixi.tasks.configure_wasm]
-cmd = ["rustup", "target", "add", "wasm32-unknown-emscripten", "--toolchain", "nightly-2025-02-01"]
-depends-on = ["configure_nightly"]
+#[tool.pixi.tasks.configure_wasm]
+#cmd = ["rustup", "target", "add", "wasm32-unknown-emscripten", "--toolchain", "nightly-2025-02-01"]
+#depends-on = ["configure_nightly"]
 
 [tool.pixi.tasks.build_pyodide]
 cmd = ["pyodide", "build"]
