--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,8 @@ platforms = ["linux-64"]
 default = {features = [], solve-group = "default"}
 
 [tool.pixi.dependencies]
+python = "==3.12.10"
+pip="==25.1"
 pyodide-build = "==0.30.2"
 emscripten = "==3.1.58"
 nodejs = ">=22.13.0,<22.14"
@@ -183,5 +185,5 @@ rust-std-wasm32-unknown-emscripten = "==1.86"
 
 [tool.pixi.tasks.build_pyodide]
 cmd = ["pyodide", "build"]
-env = { RUSTUP_TOOLCHAIN = "nightly-2025-02-01", RUSTFLAGS = "-C target-feature=+atomics,+bulk-memory,+mutable-globals -C link-arg=-sSIDE_MODULE=2 -C link-arg=-sWASM_BIGINT -Z emscripten-wasm-eh"} 
+env = { RUSTC_BOOTSTRAP = "1", RUSTFLAGS = "-C target-feature=+atomics,+bulk-memory,+mutable-globals -C link-arg=-sSIDE_MODULE=2 -C link-arg=-sWASM_BIGINT -Z emscripten-wasm-eh"} 
 depends-on = ["configure_wasm"]
