--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,6 +174,7 @@ emscripten = "==3.1.58"
 nodejs = ">=22.13.0,<22.14"
 rust = "==1.86"
 rust-std-wasm32-unknown-emscripten = "==1.86"
+rust-src = "==1.86"
 
 
 #[tool.pixi.tasks.configure_nightly]
@@ -186,4 +187,3 @@ rust-std-wasm32-unknown-emscripten = "==1.86"
 [tool.pixi.tasks.build_pyodide]
 cmd = ["pyodide", "build"]
 env = { RUSTC_BOOTSTRAP = "1", RUSTFLAGS = "-C target-feature=+atomics,+bulk-memory,+mutable-globals -C link-arg=-sSIDE_MODULE=2 -C link-arg=-sWASM_BIGINT -Z emscripten-wasm-eh"} 
-depends-on = ["configure_wasm"]
