--- a/.github/workflows/wheels314.yml
+++ b/.github/workflows/wheels314.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_SKIP: cp39-* pp* *win32 *musl*
+          CIBW_SKIP: cp314t-* pp* *win32 *musl*
           CIBW_ARCHS_LINUX: ppc64le
       - uses: actions/upload-artifact@v4
         with:
@@ -147,7 +147,7 @@ jobs:
         run: |
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_SKIP: cp39-* pp* *win32 *musl*
+          CIBW_SKIP: cp314t-* pp* *win32 *musl*
           CIBW_ARCHS_LINUX: s390x
       - uses: actions/upload-artifact@v4
         with:
@@ -180,7 +180,7 @@ jobs:
         run: |
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_SKIP: cp39-* pp* *amd64 *musl*
+          CIBW_SKIP: cp314t-* pp* *amd64 *musl*
       - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
